Added featured sections

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -9,6 +9,7 @@
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Bootstrap Project</title>
     </head>
     <body>
@@ -62,7 +63,56 @@
             <h1>My First Bootstrap Page</h1>
             <p>Resize this responsive page to see the effect!</p>
         </div>
-
+        <div class="container">
+            <div class="row mb-2">
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden
+                        flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-primary">World</strong>
+                            <h3 class="mb-0">Featured post</h3>
+                            <div class="mb-1 text-muted">Nov 12</div>
+                            <p class="card-text mb-auto">This is a wider card
+                                with supporting text below as a natural lead-in
+                                to additional content.</p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <svg class="bd-placeholder-img" width="200"
+                                height="250" xmlns="http://www.w3.org/2000/svg"
+                                preserveAspectRatio="xMidYMid slice"
+                                focusable="false" role="img"
+                                aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect
+                                    width="100%" height="100%" fill="#55595c"></rect><text
+                                    x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row no-gutters border rounded overflow-hidden
+                        flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-success">Design</strong>
+                            <h3 class="mb-0">Post title</h3>
+                            <div class="mb-1 text-muted">Nov 11</div>
+                            <p class="mb-auto">This is a wider card with
+                                supporting text below as a natural lead-in to
+                                additional content.</p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <svg class="bd-placeholder-img" width="200"
+                                height="250" xmlns="http://www.w3.org/2000/svg"
+                                preserveAspectRatio="xMidYMid slice"
+                                focusable="false" role="img"
+                                aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect
+                                    width="100%" height="100%" fill="#55595c"></rect><text
+                                    x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
@@ -74,8 +124,10 @@
                 </div>
                 <div class="col-sm-4">
                     <h3>Column 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit...</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Ex molestias inventore modi quos iste aut harum? Nam
+                        nesciunt mollitia omnis, rerum eveniet ea labore
+                        sapiente ullam? Id aspernatur veritatis eum?</p>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation
                         ullamco laboris...</p>
                 </div>
@@ -88,6 +140,9 @@
                 </div>
             </div>
         </div>
+
+
+
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
